--- a/styles.css
+++ b/styles.css
@@ -61,8 +61,7 @@
 }
 
 li:hover {
-    border-bottom: 1px solid black;
-    padding-bottom: 1px;
+    text-decoration: underline
     /*change hover*/
 }
 
