--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 .container {
     width: 100%;
-    max-width: 969px;
+    max-width: 970px;
     margin: auto;
 }
 
@@ -75,7 +75,8 @@
     background: #F6F6F6;
 }
 
-.aboutMe .block {
+
+.aboutMe .introduction {
     display: flex;
     flex-direction: column;
     gap: 30px;
@@ -83,7 +84,7 @@
     margin: auto;
 }
 
-.skills .product {
+.skills .editors {
     display: flex;
     flex-direction: row;
     gap: 97px;
@@ -99,7 +100,7 @@
     padding-bottom: 80px;
 }
 
-.skills .product .icon {
+.skills .editors .icon {
     display: block;
     margin-left: auto;
     margin-right: auto;
