--- a/styles.css
+++ b/styles.css
@@ -157,6 +157,11 @@
     box-shadow: inset 0 0 0 rgb(169, 30, 46), 0 0 1.5em rgb(217, 67, 84);
 }
 
+.generalButton:active {
+    transform: translate(0px, -3px);
+    transition: all .1s ease-in;
+}
+
 .footer .socialGroup {
     display: flex;
     flex-direction: row;
