--- a/styles/normalize.css
+++ b/styles/normalize.css
@@ -34,6 +34,15 @@ button {
     outline: none;
 }
 
+
+input[type="checkbox"],
+input[type="radio"] {
+    box-sizing: border-box; /* 1 */
+    padding: 0; /* 2 */
+    *height: 13px; /* 3 */
+    *width: 13px; /* 3 */
+}
+
 ol,
 ul,
 menu {
@@ -104,3 +113,5 @@ input:-webkit-autofill:active {
 ::-webkit-scrollbar-thumb:hover {
     background: #6b7c8a;
 }
+
+
