--- a/styles.css
+++ b/styles.css
@@ -1,40 +1,6 @@
 @import "styles/reset.css";
 
-@font-face {
-    font-family: 'Tourney';
-    src: url("fonts/tourney/Tourney-VariableFont_wdth,wght.ttf") format('truetype'),
-    url("fonts/tourney/Tourney-VariableFont_wdth,wght.woff") format('woff'),
-    url("fonts/tourney/Tourney-VariableFont_wdth,wght.woff2") format('woff2');
-}
-
-@font-face {
-    font-family: 'Staatliches';
-    src: url("fonts/staatliches/Staatliches-Regular.woff") format('woff'),
-    url("fonts/staatliches/Staatliches-Regular.woff2") format('woff2');
-}
-
-@font-face {
-    font-family: 'Francois One';
-    src: url("fonts/francois-one/FrancoisOne-Regular.woff") format('woff'),
-    url("fonts/francois-one/FrancoisOne-Regular.woff2") format('woff2');
-}
-
-@font-face {
-    font-family: 'Farro';
-    src: url("fonts/farro/Farro-Light .woff") format('woff'),
-    url("fonts/farro/Farro-Light.woff2") format('woff2');
-}
-
-@font-face {
-    font-family: 'PT Sans';
-    src: url("fonts/pt_sans/PTSans-Regular.woff2") format('woff2'),
-    url("fonts/pt_sans/PTSans-Italic.woff2") format('woff2');
-}
-
-@font-face {
-    font-family: 'PT Sans-Bold';
-    src: url("fonts/pt_sans/PTSans-Bold.woff2") format('woff2');
-}
+@import "styles/fonts.css";
 
 main {
     font-family: 'PT Sans', sans-serif;
@@ -108,7 +74,7 @@ main {
 .chapter {
     font-family: 'Farro', sans-serif;
     font-weight: 300;
-    font-size: 30px;
+    font-size: 22px;
     letter-spacing: 0.04em;
     color: #000000;
     vertical-align: 50%;
