--- a/styles/reset.css
+++ b/styles/reset.css
@@ -330,7 +330,7 @@ button,
 input,
 select,
 textarea {
-    color: #222;
+    /*color: #222;*/
 }
 
 
@@ -363,4 +363,25 @@ textarea {
     background: #ccc;
     color: #000;
     padding: 0.2em 0;
+}
+
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
+* {
+    box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
+a,
+button {
+    cursor: pointer;
+    outline: none;
 }
