--- a/styles.css
+++ b/styles.css
@@ -267,6 +267,8 @@ input[type=file] {
     width: 30%;
 }
 
+/*DROP MENU*/
+
 ul {
     letter-spacing: 0.04em;
     text-transform: uppercase;
@@ -275,9 +277,6 @@ ul {
     font-weight: 500;
     font-size: 24px;
     border-radius: 6px;
-
-    /*margin-left: 10px;*/
-    /*margin-top: 10px;*/
 }
 
 ul.dropdown li {
@@ -311,7 +310,7 @@ ul li ul.dropdown {
 }
 
 ul li a:hover {
-    background: #b0abab;
+    background: #cabbb3;
     border-radius: 6px;
 }
 
