--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -2,6 +2,10 @@
 @import "styles/mixins";
 @import "styles/variables";
 
+* {
+  transition: all .1s ease-in;
+}
+
 html {
   text-align: center;
 }
@@ -85,6 +89,13 @@ html {
       justify-content: center;
       gap: 5px;
 
+      .item {
+        border-radius: 50%;
+
+        &:hover {
+          background-color: rgba(255, 204, 0, .7);
+        }
+      }
     }
   }
 
@@ -122,7 +133,7 @@ html {
 
 
   &:hover {
-    opacity: .7;
+    background-color: $color-gold;
   }
 }
 
