--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -3,3 +3,4 @@ $color-gold: #FFCC00;
 $sub-text-color: #898F8F;
 $general-text-color: #333333;
 $light-grey-color: #666666;
+$border: 1px solid $color-gold;
