--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,2 +1,6 @@
-@import "styles/normalize.css";
+@import "../styles/normalize.css";
+@import "./mixins";
+@import "./variables";
+@import "./responsive";
+@import "fonts";
 
